apps/saga/jellyfin/jellyfin-patch.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
spec:
  replicas: 1
